Bug #20336 CLUSTERLOG commands have no effect
Submitted: 8 Jun 2006 12:49 Modified: 14 Jun 2006 2:31
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:4.1,5.0,5.1 OS:
Assigned to: Tomas Ulin Target Version:

[8 Jun 2006 12:49] Tomas Ulin
Description:
ALL CLUSTERLOG STATISTICS=15;

has no effect.

How to repeat:
see above
[8 Jun 2006 15:35] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/7392
[12 Jun 2006 11:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/7524
[12 Jun 2006 11:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/7526
[12 Jun 2006 11:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/7527
[12 Jun 2006 13:46] Tomas Ulin
pushed to 5.1.12, 4.1.21, 5.0.23
[14 Jun 2006 2:31] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 4.1.21/5.0.23/5.1.12 changelogs. Closed.