Bug #20336 CLUSTERLOG commands have no effect - always calculate max log level on node start - send event subscribe uncond